# letcodein-selenium

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml  conftest.py  docker-compose.yaml  pyproject.toml
common/: webelement.py
src/: consts.py  utils.py  webelement.py
src/pages/: base_page.py
src/pages/elements/buttons/: buttons_page.py
src/pages/elements/checkbox/: checkbox_page.py
src/pages/elements/links/: links_page.py
src/pages/elements/radio/: radio_page.py
src/pages/elements/text_box/: text_box_page.py
tests/: test_sample.py
tests/elements/button/: test_button.py
tests/elements/checkbox/: test_checkbox.py
tests/elements/links/: test_links.py
tests/elements/radio/: test_radio.py
tests/elements/text_box/: test_text_box.py
tests/radio/: test_radio.py
tests/text_box/: test_text_box.py
