[tool.pytest.ini_options]
minversion = "6.2.5"
addopts = "-rA --disable-warnings"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.poetry]
name = "selenium-study"
version = "0.1.0"
description = ""
authors = ["Leonardo Tsuda <leonardo.tsuda@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pytest = "^6.2.5"
selenium = "^4.1.0"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
